--- a/driver-parent/driver-common/pom.xml
+++ b/driver-parent/driver-common/pom.xml
@@ -36,6 +36,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>iottree-driver-common</finalName>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
 				defaults (may be moved to parent pom) -->
 			<plugins>
