--- a/driver-parent/driver-opc/pom.xml
+++ b/driver-parent/driver-opc/pom.xml
@@ -70,6 +70,7 @@
   </dependencies>
 
   <build>
+  	<finalName>iottree-driver-opc</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
