--- a/ext-parent/ext-basic/pom.xml
+++ b/ext-parent/ext-basic/pom.xml
@@ -11,7 +11,7 @@
   <packaging>jar</packaging>
 
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url></url>
 
   <properties>
 	<output.directory>../../_output</output.directory>
@@ -57,6 +57,7 @@
   </dependencies>
 
   <build>
+  <finalName>iottree-ext-basic</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
