--- a/core/pom.xml
+++ b/core/pom.xml
@@ -293,6 +293,10 @@
     <version>2.11.0</version>
 </dependency>
 		
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+</dependency>
 		
 	</dependencies>
 	
