--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<spring.version>5.2.9.RELEASE</spring.version>
 		<!-- 3.8.1 -->
         <junit.version>4.12</junit.version>
-        <slf4j.version>1.7.12</slf4j.version>
+        <slf4j.version>2.0.9</slf4j.version>
         <logback.version>1.1.11</logback.version>
 		
 
@@ -139,6 +139,13 @@
 			<artifactId>wrapper</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>${slf4j.version}</version>
+</dependency>
+
 		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 		
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/jasper -->
