--- a/server/wrapper.sor.conf
+++ b/server/wrapper.sor.conf
@@ -26,7 +26,7 @@ wrapper.java.classpath.3=
 wrapper.java.library.path.1=./
 
 # Java Additional Parameters
-wrapper.java.additional.1=-server
+wrapper.java.additional.1=-server -Dfile.encoding=UTF-8
 
 # Initial Java Heap Size (in MB)
 wrapper.java.initmemory=64
