--- a/ext-parent/ext-basic/pom.xml
+++ b/ext-parent/ext-basic/pom.xml
@@ -1,133 +1,120 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>ext-parent</artifactId>
-    <groupId>org.iottree.ext</groupId>
-    <version>1.7.6</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>iottree-ext-basic</artifactId>
- 
-  <packaging>jar</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>ext-parent</artifactId>
+		<groupId>org.iottree.ext</groupId>
+		<version>1.7.6</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<artifactId>iottree-ext-basic</artifactId>
 
-  <!-- FIXME change it to the project's website -->
-  <url></url>
+	<packaging>jar</packaging>
 
-  <properties>
-	<output.directory>../../_output</output.directory>
-  </properties>
-  
-  <dependencies>
-         <dependency>
-	    <groupId>org.iottree</groupId>
-	    <artifactId>iottree-core</artifactId>
-	    <version>1.7.6</version>
-	</dependency>
-	
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    
-    		<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<!-- FIXME change it to the project's website -->
+	<url></url>
+
+	<properties>
+		<output.directory>../../_output</output.directory>
+	</properties>
+
+	<dependencies>
 		<dependency>
-		    <groupId>org.json</groupId>
-		    <artifactId>json</artifactId>
+			<groupId>org.iottree</groupId>
+			<artifactId>iottree-core</artifactId>
+			<version>${project.version}</version>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
-<dependency>
-    <groupId>org.apache.kafka</groupId>
-    <artifactId>kafka-clients</artifactId>
-    <version>3.7.0</version>
-</dependency>
 
-<!-- https://mvnrepository.com/artifact/com.infiniteautomation/bacnet4j -->
-<!-- 
-	<dependency>
-	    <groupId>com.infiniteautomation</groupId>
-	    <artifactId>bacnet4j</artifactId>
-	    <version>5.0.2</version>
-	</dependency>
-		 -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>3.7.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.infiniteautomation/bacnet4j -->
+		<!-- <dependency> <groupId>com.infiniteautomation</groupId> <artifactId>bacnet4j</artifactId> 
+			<version>5.0.2</version> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/com.influxdb/influxdb-client-java -->
 
+		<!-- https://mvnrepository.com/artifact/com.alphacephei/vosk -->
+		<dependency>
+			<groupId>com.alphacephei</groupId>
+			<artifactId>vosk</artifactId>
+			<version>0.3.45</version>
+		</dependency>
 		
-  </dependencies>
+	</dependencies>
 
-  <build>
-  <finalName>iottree-ext-basic</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  
-  <repositories>
-  <!-- 
-    <repository>
-        <releases>
-            <enabled>false</enabled>
-        </releases>
-        <snapshots>
-            <enabled>true</enabled>
-        </snapshots>
-        <id>ias-snapshots</id>
-        <name>Infinite Automation Snapshot Repository</name>
-        <url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
-    </repository>
-    <repository>
-        <releases>
-            <enabled>true</enabled>
-        </releases>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-        <id>ias-releases</id>
-        <name>Infinite Automation Release Repository</name>
-        <url>https://maven.mangoautomation.net/repository/ias-release/</url>
-    </repository>
-     -->
-</repositories>
+	<build>
+		<finalName>iottree-ext-basic</finalName>
+		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
+				defaults (may be moved to parent pom) -->
+			<plugins>
+				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+				<plugin>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.0.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.0</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.22.1</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.0.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>2.5.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.8.2</version>
+				</plugin>
+				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.7.1</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>3.0.0</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
+	<repositories>
+		<!-- <repository> <releases> <enabled>false</enabled> </releases> <snapshots> 
+			<enabled>true</enabled> </snapshots> <id>ias-snapshots</id> <name>Infinite 
+			Automation Snapshot Repository</name> <url>https://maven.mangoautomation.net/repository/ias-snapshot/</url> 
+			</repository> <repository> <releases> <enabled>true</enabled> </releases> 
+			<snapshots> <enabled>false</enabled> </snapshots> <id>ias-releases</id> <name>Infinite 
+			Automation Release Repository</name> <url>https://maven.mangoautomation.net/repository/ias-release/</url> 
+			</repository> -->
+	</repositories>
 
 </project>
