--- a/ext-parent/ext-basic/pom.xml
+++ b/ext-parent/ext-basic/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>ext-parent</artifactId>
 		<groupId>org.iottree.ext</groupId>
-		<version>1.7.6</version>
+		<version>1.7.7</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>iottree-ext-basic</artifactId>
@@ -57,6 +57,13 @@
 			<version>0.3.45</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.lmdbjava/lmdbjava 
+<dependency>
+    <groupId>org.lmdbjava</groupId>
+    <artifactId>lmdbjava</artifactId>
+    <version>0.9.1</version>
+</dependency>
+		-->
 	</dependencies>
 
 	<build>
