--- a/driver-parent/driver-opc/pom.xml
+++ b/driver-parent/driver-opc/pom.xml
@@ -4,8 +4,7 @@
   <parent>
     <artifactId>driver-parent</artifactId>
     <groupId>org.iottree.driver</groupId>
-    <version>1.7.7</version>
-
+    <version>1.7.8</version>
   </parent>
 
   <artifactId>iottree-driver-opc</artifactId>
@@ -41,6 +40,8 @@
 	     <systemPath>${basedir}/lib/jeasyopc.jar</systemPath>
 	</dependency>
 	 -->
+	
+	<!-- 
 	<dependency>
 	    <groupId>org.openscada.jinterop</groupId>
 	    <artifactId>org.openscada.jinterop.core</artifactId>
@@ -66,7 +67,18 @@
 	    <artifactId>bcprov-jdk15on</artifactId>
 	    <version>1.61</version>
 	</dependency>
+ -->
+<dependency>
+			<groupId>org.eclipse.milo</groupId>
+			<artifactId>milo-sdk-client</artifactId>
+		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.eclipse.milo/sdk-server -->
+		<dependency>
+			<groupId>org.eclipse.milo</groupId>
+			<artifactId>milo-sdk-server</artifactId>
+		</dependency>
+		
   </dependencies>
 
   <build>
