--- a/driver-parent/driver-common/pom.xml
+++ b/driver-parent/driver-common/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>driver-parent</artifactId>
 		<groupId>org.iottree.driver</groupId>
-		<version>1.7.8</version>
+		<version>1.7.9</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>iottree-driver-common</artifactId>
@@ -19,7 +19,26 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<output.directory>../../_output</output.directory>
 	</properties>
-
+	<!-- 
+	<repositories>
+    <repository>
+        <id>ias-releases</id>
+        <name>Infinite Automation Releases</name>
+        <url>https://maven.mangoautomation.net/repository/ias-release/</url>
+        <includes>
+        <include>com.infiniteautomation:*</include>
+      </includes>
+    </repository>
+    <repository>
+        <id>ias-snapshots</id>
+        <name>Infinite Automation Snapshots</name>
+        <url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+    </repository>
+</repositories>
+ -->
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -27,13 +46,38 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+		<!-- https://mvnrepository.com/artifact/io.netty/netty-all 
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.1.53.Final</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+		    <groupId>com.digitalpetri.enip</groupId>
+		    <artifactId>cip-client</artifactId>
+		    <version>1.4.1</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.infiniteautomation</groupId>
+		    <artifactId>bacnet4j</artifactId>
+		    <version>6.0.1</version>
+		</dependency>
+		-->
+		
+		
+		<dependency>
+		    <groupId> iottree</groupId>
+		    <artifactId>bacnet4j</artifactId>
+		    <scope>system</scope>
+		    <version>6.1.0</version>
+		     <systemPath>${basedir}/lib/bacnet4j-6.1.0.jar</systemPath>
+		</dependency>
+		
+	
+
+</dependencies>
 
 	<build>
 		<finalName>iottree-driver-common</finalName>
@@ -82,6 +126,30 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	
-	
+<!-- 
+  <repositories>
+    <repository>
+        <releases>
+            <enabled>false</enabled>
+        </releases>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+        <id>ias-snapshots</id>
+        <name>Infinite Automation Snapshot Repository</name>
+        <url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
+    </repository>
+    <repository>
+        <releases>
+            <enabled>true</enabled>
+        </releases>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+        <id>ias-releases</id>
+        <name>Infinite Automation Release Repository</name>
+        <url>https://maven.mangoautomation.net/repository/ias-release/</url>
+    </repository>
+</repositories>
+ -->
 </project>
