--- a/ext-parent/ext-basic/pom.xml
+++ b/ext-parent/ext-basic/pom.xml
@@ -70,6 +70,35 @@
     <version>0.9.1</version>
 </dependency>
 		-->
+		
+		<dependency>
+		    <groupId>com.microsoft.cognitiveservices.speech</groupId>
+		    <artifactId>client-sdk</artifactId>
+		    <version>1.38.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.alibaba.nls</groupId>
+		    <artifactId>nls-sdk-tts</artifactId>
+		    <version>2.2.14</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.alibaba.nls</groupId>
+		    <artifactId>nls-sdk-common</artifactId>
+		    <version>2.2.14</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.jaxb</groupId>
+		    <artifactId>jaxb-runtime</artifactId>
+		    <version>2.3.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
