--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.iottree</groupId>
 		<artifactId>iottree-parent</artifactId>
-		<version>1.8.5</version>
+		<version>1.8.6</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -296,7 +296,12 @@
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-api</artifactId>
 </dependency>
-		
+		<!-- https://mvnrepository.com/artifact/com.github.victools/jsonschema-generator -->
+<dependency>
+    <groupId>com.github.victools</groupId>
+    <artifactId>jsonschema-generator</artifactId>
+    <version>4.38.0</version>
+</dependency>
 	</dependencies>
 	
 </project>
