--- a/ext-parent/ext-basic/pom.xml
+++ b/ext-parent/ext-basic/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>ext-parent</artifactId>
 		<groupId>org.iottree.ext</groupId>
-		<version>1.8.5</version>
+		<version>1.8.6</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>iottree-ext-basic</artifactId>
@@ -50,7 +50,6 @@
 			<version>5.0.2</version> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/com.influxdb/influxdb-client-java -->
 
-		<!-- https://mvnrepository.com/artifact/com.alphacephei/vosk -->
 		<dependency>
 			<groupId>com.alphacephei</groupId>
 			<artifactId>vosk</artifactId>
@@ -62,32 +61,38 @@
 		    <artifactId>commons-email</artifactId>
 		    <version>1.6.0</version>
 		</dependency>
-
-<!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j -->
+		
+		<!-- https://mvnrepository.com/artifact/io.modelcontextprotocol.sdk/mcp
+		<dependency>
+		    <groupId>io.modelcontextprotocol.sdk</groupId>
+		    <artifactId>mcp</artifactId>
+		    <version>0.17.0</version>
+		</dependency>
+		 -->
+<!-- 
 <dependency>
     <groupId>dev.langchain4j</groupId>
     <artifactId>langchain4j</artifactId>
     <version>1.9.1</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-ollama -->
 <dependency>
     <groupId>dev.langchain4j</groupId>
     <artifactId>langchain4j-ollama</artifactId>
     <version>1.9.1</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-open-ai -->
 <dependency>
     <groupId>dev.langchain4j</groupId>
     <artifactId>langchain4j-open-ai</artifactId>
     <version>1.9.1</version>
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/com.openai/openai-java -->
 <dependency>
     <groupId>com.openai</groupId>
     <artifactId>openai-java</artifactId>
     <version>4.12.0</version>
 </dependency>
+ -->
+
     <!-- https://mvnrepository.com/artifact/io.github.givimad/piper-jni 
 <dependency>
     <groupId>io.github.givimad</groupId>
